apply repository pattern dan unit test

--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
-APP_NAME="E-Wallet"
-APP_ENV=local
-APP_KEY=
+APP_NAME="E-Wallet - Testing"
+APP_ENV=testing
+APP_KEY=base64:TC4SHEDo9pClIgEXlmcXICrfaToIC+huJKeRgAKEiJQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
